# trainmed

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: index.html  server.py
data/competitive/: insights.json
data/kb/: arthrex_rotator_cuff_index.md  rag_test_results.md  rag_test_results_stryker.md  rotator_cuff_index.md  smithnephew_rotator_cuff_index.md  stryker_rotator_cuff_index.md
data/pdfs/: 68-20-248-20arthroflex-20rcr.md  68-20-249-20arthroflex-20scr.md  all-suture-anchors-for-rcr.md  all-suture-anchors-in-labral-repair-scientific-update.md  allograft-materials-for-rotator-cuff-augmentation.md  analysis-of-dna-residuals-in-arthroflex-dermal-allograft.md  analysis-of-the-acellular-matrix-growth-factors-and-cytokines-present-in-arthrof.md  arthroflex-biowasher-for-use-with-speedbridge-knotless-rotator-cuff-repairs.md  arthroflex-decellularized-bio-implant-for-soft-tissue-repair.md  arthroflex-dermal-allograft-scientific-update-nonclinical-and-biomechanical-stud.md  arthroflex-dermal-allograft-scientific-update-upper-extremity.md  arthroscopic-rotator-cuff-repair-rationale-technique-and-results-of-knotless-sel.md  biceps-tenodesis-options-for-fixation-scientific-update.md  biceps-tenodesis-swivelock-system.md  biceps-tenotomy-versus-tenodesis-scientific-update.md  biologic-tuberoplasty.md  bone-block-cerclage.md  cde99104-f9ec-4783-8c83-18e9591ee663.md  (+45 more)
docs/: MULTI_COMPANY.md
scripts/: dump_product.py  ingest_competitive_insights.py  ingest_to_kb.py  migrate_add_company.py  test_isolation.py  test_rag.py
src/trainmed/: cli.py  (+11 more)
(+497 files in other folders)
