[project]
name = "trainmed"
version = "0.1.0"
description = "TrainMed ingestion pipeline: transcript extraction into a local knowledge base"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trainmed = "trainmed.cli:main"
